test/sema/infer-generic-args-autoreference.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func f<T>(p: T*) {}

func main() {
    let i = 42;

    // TODO: Auto-reference arguments to pointers when inferring generic arguments.
    // CHECK: [[@LINE+1]]:5: error: no matching function for call to 'f' with argument list of type '(int)'
    f(i);
}
